--- a/sdk/Finbourne.Configuration.Sdk/Finbourne.Configuration.Sdk.csproj
+++ b/sdk/Finbourne.Configuration.Sdk/Finbourne.Configuration.Sdk.csproj
@@ -6,7 +6,7 @@
     <Authors>engineering@finbourne.com</Authors>
     <Company>FINBOURNE Technology Limited</Company>
   	<Product>LUSID</Product>
-	  <Description>FINBOURNE Configuration service SDK</Description>
+	  <Description>FINBOURNE Configuration Store SDK</Description>
     <RepositoryUrl>https://github.com/finbourne/configuration-sdk-csharp-preview</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <DocumentationFile></DocumentationFile>
